# Enterprise_AI_Data_Analyst

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  app.py  app_streamlit.py  application_service.py  dataset_chat.py  prueba_input.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: constants.py  logging_config.py  prompts.py  settings.py
core/: __init__.py  chat_engine.py  data_processor.py  data_processor_legacy.py  database.py  dataset_selector.py  document_loader.py  enterprise_ai.py  exceptions.py  logger.py  pipeline.py  project_manager.py  prompt_builder.py  settings.py
datasets/: ventas.xlsx
llm/: base_llm.py  gemini_client.py  llm_factory.py  mock_llm.py  provider.py
prompts/: insights_prompt.py
scripts/: generate_dataset.py
tests/: list_models.py  test_ai_insights_engine.py  test_ai_report_engine.py  test_analysis_engine.py  test_basic_profiler.py  test_chat.py  test_dashboard_engine.py  test_data_processor.py  test_dataset_profiler.py  test_document_loader.py  test_enterprise_ai.py  test_enterprise_ai_dataframe.py  test_enterprise_ai_file.py  test_enterprise_engine.py  test_factory.py  test_gemini.py  test_insights_prompt.py  test_ml_profiler.py  test_plotly_engine.py  test_quality_profiler.py  test_recommendation_engine.py  test_statistics_engine.py  test_statistics_profiler.py  test_visualization_engine.py
ui/: charts.py  chat.py  dataset_panel.py  header.py  main_layout.py  metrics.py  report.py  sidebar.py  uploader.py
(+77 files in other folders)
