[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-data-analyst"
version = "0.1.0"
description = "Plataforma empresarial de Inteligencia Artificial para análisis automatizado de datos."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Edgar Arteaga", email = "arteduro@gmail.com" }
]

license = { text = "MIT" }

keywords = [
    "inteligencia-artificial",
    "machine-learning",
    "rag",
    "langchain",
    "langgraph",
    "streamlit",
    "fastapi",
    "python",
    "data-science",
    "business-intelligence"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }